--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: ALLOWED_HOSTS
-        value: "*"
+        value: "rework-bcrc.onrender.com"
       - key: DATABASE_URL
         sync: false
       - key: EMAIL_HOST
